--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 	<meta name="author" content="JOO">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
 
+    <script src="mascot.js"></script>
 	<script src="core.js"></script>
+	
 	<script>
         var url = 'http://www.naver.com';
         var year = 2015;
