--- a/detail.html
+++ b/detail.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>index</title>
+	<title>detail</title>
 	<meta name="description" content="">
 	<meta name="author" content="JOO">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
