--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-	
+
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
@@ -9,13 +9,14 @@
 	<meta name="description" content="">
 	<meta name="author" content="JOO">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
-	
+
 	<link href="css/bootstrap.min.css" rel="stylesheet">
-   
+
     <script src="js/mascot.js"></script>
 	<script src="js/core.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-		
+	<script src="https://gist.github.com/gjjoo/d639f326341418d2d861.js"></script>
+
 </head>
 <body>
 	<br/>
@@ -34,7 +35,7 @@
 			<h3 class="text-muted">샘플용(랭킹뉴스)</h3>
 		</div>
 		<hr/>
-		
+
 		<div class="jumbotron">
 			<h1>우표 세상서도 홀대받는 독립운동가</h1>
 			<p class="lead">일제강점기 독립군의 이야기를 그린 영화 '암살'이 최근 흥행하면서 독립운동가들에 대한 관심이 커지고 있다. 우리 현대사는 항일 투쟁 중 최후를 맞거나 살아서도 정당한 대우를 받지 못한 수많은 독립운동가와 그의 후손들을 외면해 왔다. ‘국가의 역사와 문화를 표현하고 있어 동시대의 사실적인 자료로 인정받는다’는 우표의 소재로서도 독립운동가들은 홀대를 받았다...</p>
@@ -65,7 +66,7 @@
 				<p>물에 젖은 비키니 자태 '아찔' 완벽 글래머 몸매 배우 김희정이 '18초'에 출연해 화제인 가운데, 과거 공개된 비키니 사진이 주목받고 있다. 김희정은 과거 한 음료 회사의 모델로 활동할...</p>
 			</div>
 		</div>
-		
+
 		<hr/>
 		<footer class="footer">
 			<p>&copy; Company 2015</p>
