문장 위치 수정

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <script src="js/mascot.js"></script>
 	<script src="js/core.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="https://gist.github.com/gjjoo/d639f326341418d2d861.js"></script>
 
 </head>
 <body>
@@ -64,6 +63,10 @@
 
 				<h4>18초 김희정</h4>
 				<p>물에 젖은 비키니 자태 '아찔' 완벽 글래머 몸매 배우 김희정이 '18초'에 출연해 화제인 가운데, 과거 공개된 비키니 사진이 주목받고 있다. 김희정은 과거 한 음료 회사의 모델로 활동할...</p>
+			</div>
+
+			<div class="col-lg-12">
+				<script src="https://gist.github.com/gjjoo/d639f326341418d2d861.js"></script>
 			</div>
 		</div>
 
